// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill Component should render basic Pill Component correctly 1`] = `
<div>
  <div
    class="sc-dkPtRN chlKdc"
  >
    <p
      class="sc-gsDKAQ eHDJig"
    >
      test
    </p>
  </div>
  <div
    class="sc-dkPtRN cVnAYw"
  >
    <p
      class="sc-gsDKAQ eHDJig"
    >
      test actived
    </p>
  </div>
</div>
`;

exports[`Pill Component should render icons of Pill Component correctly 1`] = `
<div>
  <div
    class="sc-dkPtRN chlKdc"
  >
    <p
      class="sc-gsDKAQ eHDJig"
    >
      has closed
    </p>
    <div
      class="sc-bdvvtL hZeSqt sc-hKwDye sc-jRQBWg bhCFhM fmYyGE"
      data-icon-name="close"
    >
      <div>
        mock svg
      </div>
    </div>
  </div>
  <div
    class="sc-dkPtRN chlKdc"
  >
    <div
      class="sc-bdvvtL iEQYcl sc-hKwDye sc-eCImPb bhCFhM hWCMKE"
      data-icon-name="check"
    >
      <div>
        mock svg
      </div>
    </div>
    <p
      class="sc-gsDKAQ eHDJig"
    >
      checked
    </p>
  </div>
  <div
    class="sc-dkPtRN chlKdc"
  >
    <div
      class="sc-bdvvtL iEQYcl sc-hKwDye sc-eCImPb bhCFhM hWCMKE"
      data-icon-name="check"
    >
      <div>
        mock svg
      </div>
    </div>
    <p
      class="sc-gsDKAQ eHDJig"
    >
      checked and has closed
    </p>
    <div
      class="sc-bdvvtL hZeSqt sc-hKwDye sc-jRQBWg bhCFhM fmYyGE"
      data-icon-name="close"
    >
      <div>
        mock svg
      </div>
    </div>
  </div>
</div>
`;
